@@ -21,22 +21,14 @@
 	lv2:port [
 		a lv2:InputPort, lv2:CVPort ;
 		lv2:index 0 ;
-		lv2:symbol "gate" ;
-		lv2:name "Gate" ;
-		lv2:default 0.0 ;
-		lv2:minimum 0.0 ;
-        lv2:maximum 1.0 ; 
-	] ,	[
-		a lv2:InputPort, lv2:CVPort ;
-		lv2:index 1 ;
-		lv2:symbol "retrigger" ;
-		lv2:name "Retrigger" ;
+		lv2:symbol "trigger" ;
+		lv2:name "Trigger" ;
 		lv2:default 0.0 ;
 		lv2:minimum 0.0 ;
         lv2:maximum 1.0 ; 
 	] ,	[
 	  	a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 2 ;
+		lv2:index 1 ;
 		lv2:symbol "attack" ;
 		lv2:name "Attack" ; 
 		lv2:default 0.05 ;
@@ -44,7 +36,7 @@
 		lv2:maximum 1 ;
 	] ,	[
 	  	a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 3 ;
+		lv2:index 2 ;
 		lv2:symbol "decay" ;
 		lv2:name "Decay" ;
 		lv2:default 0.1 ;
@@ -52,7 +44,7 @@
 		lv2:maximum 1 ;
 	] ,	[
 	  	a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 4 ;
+		lv2:index 3 ;
 		lv2:symbol "delay" ;
 		lv2:name "Delay" ;
 		lv2:default 0 ;
@@ -60,7 +52,7 @@
 		lv2:maximum 1 ;
 	] ,	[
 	  	a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 5 ;
+		lv2:index 4 ;
 		lv2:symbol "hold" ;
 		lv2:name "Hold" ;
 		lv2:default 0.02 ;
@@ -68,7 +60,7 @@
 		lv2:maximum 1 ;
 	] ,	[
 	  	a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 6 ;
+		lv2:index 5 ;
 		lv2:symbol "timeScale" ;
 		lv2:name "Time Scale" ;
 		lv2:default 0.1 ;
@@ -76,7 +68,7 @@
 		lv2:maximum 10 ;
 	] ,	[
 		a lv2:OutputPort, lv2:CVPort ;
-		lv2:index 7 ;
+		lv2:index 6 ;
 		lv2:symbol "out" ;
 		lv2:name "Out" ;
 		lv2:default 0.0 ;
@@ -84,7 +76,7 @@
         lv2:maximum 1.0 ; 
 	] ,	[
 		a lv2:OutputPort, lv2:CVPort ;
-		lv2:index 8 ;
+		lv2:index 7 ;
 		lv2:symbol "invOut" ;
 		lv2:name "Inverse Out" ;
 		lv2:default 0.0 ;
