@@ -5,6 +5,7 @@
 	* Granulator
 	* Mixer 2 channels
 	* BeatSlicer Stereo & Mono
+	* Percussive Envelope bug fix
 
 0.1.1:
 	* New presets
